feat: implement core plugin architecture including command management, action registration, player data handling, and update checking.